--- a/detectron2_detector/config/detectron2.yaml
+++ b/detectron2_detector/config/detectron2.yaml
@@ -2,3 +2,5 @@ detectron2_node:
   ros__parameters:
     detectron_config_file: "COCO-InstanceSegmentation/mask_rcnn_R_50_FPN_3x.yaml"
     pointcloud2_topic: "/realsense/camera/pointcloud"
+    pcd_downsample_factor: 16
+    categories: [1] # please check out COCO dataset category_id list if you want to config this
