--- a/detectron2_detector/package.xml
+++ b/detectron2_detector/package.xml
@@ -5,6 +5,7 @@
   <version>0.0.0</version>
   <description>This detector uses detectron2 to get object mask and then uses pointcloud2 data to estimate 3D position. </description>
   <maintainer email="stevenmacenski@gmail.com">Steven Macenski</maintainer>
+  <maintainer email="csj15thu@gmail.com">Shengjian Chen</maintainer>
   <license>Apache-2.0</license>
 
   <test_depend>ament_copyright</test_depend>
@@ -13,7 +14,6 @@
   <test_depend>python3-pytest</test_depend>
 
   <exec_depend>launch_ros</exec_depend>
-  <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>detectron2</exec_depend>
 
   <export>
