--- a/kf_hungarian_tracker/package.xml
+++ b/kf_hungarian_tracker/package.xml
@@ -5,6 +5,7 @@
   <version>0.0.0</version>
   <description>Use Kalman Filter and Hungarian algorithm to track multiple objects</description>
   <maintainer email="stevenmacenski@gmail.com">Steven Macenski</maintainer>
+  <maintainer email="csj15thu@gmail.com">Shengjian Chen</maintainer>
   <license>Apache-2.0</license>
 
   <test_depend>ament_copyright</test_depend>
@@ -13,7 +14,6 @@
   <test_depend>python3-pytest</test_depend>
 
   <exec_depend>launch_ros</exec_depend>
-  <exec_depend>rosidl_default_runtime</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
