--- a/nav2_dynamic_msgs/package.xml
+++ b/nav2_dynamic_msgs/package.xml
@@ -5,13 +5,12 @@
   <version>0.0.0</version>
   <description>Mas and srv for nav2_dynamic_obstacle</description>
   <maintainer email="stevenmacenski@gmail.com">Steven Macenski</maintainer>
+  <maintainer email="csj15thu@gmail.com">Shengjian Chen</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>rosidl_default_generators</build_depend>
-
-  <exec_depend>rosidl_default_runtime</exec_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
 
