--- a/detectron2_detector/config/detectron2.yaml
+++ b/detectron2_detector/config/detectron2.yaml
@@ -1,5 +1,6 @@
 detectron2_node:
   ros__parameters:
+    global_frame: "camera_link" # none means camera frame is the global frame
     detectron_config_file: "COCO-InstanceSegmentation/mask_rcnn_R_50_FPN_3x.yaml"
     detectron_score_thresh: 0.8
     pointcloud2_topic: "/realsense/camera/pointcloud"
